refactor: Replace get(0) with getFirst() for improved readability in test cases